--- a/src/components/Card/components/CopyHoverInfo/CopyHoverInfo.css
+++ b/src/components/Card/components/CopyHoverInfo/CopyHoverInfo.css
@@ -1,8 +1,10 @@
 .ul-copy-hover-root {
   width: 132px;
+  box-sizing: border-box;
   background-color: var(--ul-color-text);
   padding: 4px 6px;
-  position: absolute;
+  position: fixed;
+  pointer-events: none;
   color: #fff;
   font-family: var(--ul-font-family);
   font-size: var(--ul-font-size-base);
@@ -10,8 +12,7 @@
   font-weight: var(--ul-font-weight-regular);
   line-height: normal;
   text-align: center;
-  top: -56px;
-  right: 0;
+  z-index: var(--ul-z-modal);
   animation: show 250ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
   opacity: 0;
   visibility: hidden;
